Criando profile de teste.