@@ -1,18 +1,15 @@
-package Aplicacao.resources.Utils;
+package Aplicacao.resources.utils;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 public class URL {
 
     public static String decodeParam(String s) {
-        try {
-            return URLDecoder.decode(s, "UTF-8");
-        }catch (UnsupportedEncodingException e){
-            return "";
-        }
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
 
     public static List<Integer> decodeIntList(String s) {
